welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type i
    if (lookingFor==nums[i]){return i}
                         ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (lookingFor==nums[i]){return i}
                        ^